--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="gk11T2y79OuHb7wGGrJJOQo6ml9GWPuV5OWgKBEVsaM" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vijay Pratap Sharma | Portfolio</title>
